--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="camera_state_error_disabled">kameraet slået fra</string>
     <string name="camera_state_error_in_use">kameraet er i brug</string>
     <string name="camera_state_error_max_camera_devices">for mange kamera-enheder i brug</string>
+    <string name="camera_state_error_locking_focus">Kunne ikke fokusere</string>
 </resources>
