Upload images with the send button
From android 9 all requests for non-https addresses are blocked by
default. This behaviour can be configured via a network security
configuration file which can have both a blacklist and a whitelist.
It is recommended to keep a list of domains for which non-secure traffic
is permitted rather than the other way around.
I just need to find to find a way of getting the build config variable
from gradle into the xml file.

https://developer.android.com/training/articles/security-config

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="camera_state_error_in_use">kameraet er i brug</string>
     <string name="camera_state_error_max_camera_devices">for mange kamera-enheder i brug</string>
     <string name="camera_state_error_locking_focus">Kunne ikke fokusere</string>
+
+    <string name="error_on_image_upload">Kunne ikke uploade billede</string>
 </resources>
